appbar size on mobile fix

--- a/portfolio/src/appbars/Bars.css
+++ b/portfolio/src/appbars/Bars.css
@@ -69,3 +69,43 @@
  .linkStyle:hover{
      color:#fbcb3d
  }
+
+ @media (max-width: 800px) {
+ .tabName{
+    width: 100%;
+    flex: 0 5;
+    font-size: 16px; 
+    font-weight: bold;
+    color: #233127;
+    margin-right: 18px;
+
+    font-family: "SquareFont";
+ }
+
+ .siteName{
+    width: 100%;
+    font-size: 16px; 
+    font-weight: bold;
+    color: #233127;
+    flex: 1 1 20vh;
+    display: flex;
+    flex-direction: row;
+    align-items:flex-start;
+    justify-content: center;
+    align-items: center;
+ }
+
+  
+ .appbar{
+    width: 100%;
+    height: 35px;
+    background-color: #6c9477;
+    position:sticky;
+    top: 0;
+    display: flex;
+    flex-direction: row;
+    margin:0;
+}
+
+
+ }
