--- a/portfolio/src/sections/sections.css
+++ b/portfolio/src/sections/sections.css
@@ -239,7 +239,7 @@ a{
         flex: auto;
         height: 340px;
         margin-left: 5%;
-        margin-right: 30px;
+        margin-right: 10px;
         margin-top: 10px;
         margin-bottom: 10px;
         font-size: 12px;
@@ -285,6 +285,7 @@ a{
         max-width: 70%;
         color: #385540;
         text-align: justify;
+        margin-right: 10px;
         font-size: 5%;
     }
 
